--- a/index.html
+++ b/index.html
@@ -1,50 +1,84 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
   <title>Chaos Game Web</title>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #121212;
-      color: white;
+      margin: 0;
+      padding: 30px 20px;
+      background-color: #0f0f0f;
+      color: #f0f0f0;
       font-family: 'Press Start 2P', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 0;
-      padding: 20px;
     }
 
     h1 {
+      font-size: 1rem;
+      text-align: center;
       margin-bottom: 10px;
+    }
+
+    nav.breadcrumb {
+      width: 100%;
+      margin-bottom: 20px;
+      text-align: left;
+    }
+
+    nav.breadcrumb a {
+      color: #00ffff;
+      text-decoration: none;
+      font-size: 0.7rem;
+    }
+
+    nav.breadcrumb a:hover {
+      text-decoration: underline;
     }
 
     #controls {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 10px;
-      margin-bottom: 15px;
+      gap: 20px;
+      margin-bottom: 20px;
+      background-color: #1a1a1a;
+      padding: 15px;
+      border: 1px solid #444;
+      border-radius: 8px;
+      width: 100%;
+      max-width: 700px;
     }
 
     label {
+      font-size: 0.5rem;
       display: flex;
       flex-direction: column;
-      font-size: 0.9rem;
+      color: #ccc;
     }
 
     input, select, button {
-      padding: 6px 10px;
-      font-size: 1rem;
-      margin-top: 3px;
+      margin-top: 5px;
+      font-family: 'Press Start 2P', sans-serif;
+      font-size: 0.6rem;
+      padding: 6px;
+      background-color: #222;
+      color: #00ffff;
+      border: 1px solid #444;
+      border-radius: 4px;
+    }
+
+    button:hover {
+      background-color: #333;
+      cursor: pointer;
     }
 
     canvas {
-      border: 1px solid #444;
+      border: 2px solid #333;
       background-color: black;
-      margin-top: 10px;
+      margin-top: 20px;
       max-width: 100%;
     }
 
@@ -58,24 +92,28 @@
 </head>
 <body>
 
-<h1>Chaos Game im Browser</h1>
+<nav class="breadcrumb">
+  <a href="index.html">← Back to Home</a>
+</nav>
+
+<h1>Chaos Game in the Browser</h1>
 
 <div id="controls">
-  <label>Ecken (3+):
+  <label>Corners (3+):
     <input type="number" id="corners" value="3" min="3" max="10">
   </label>
-  <label>Schritt (0.1–2.0):
+  <label>Step (0.1–2.0):
     <input type="number" id="step" value="1.5" step="0.1" min="0.1" max="2">
   </label>
-  <label>Iterationen:
+  <label>Iterations:
     <input type="number" id="iterations" value="5000" min="100" max="100000" step="100">
   </label>
-  <label>Farbe:
+  <label>Color:
     <input type="color" id="color" value="#00ffff">
   </label>
   <button id="startBtn">Start</button>
   <button id="resetBtn">Reset</button>
-  <button id="saveBtn">Speichern</button>
+  <button id="saveBtn">Save</button>
 </div>
 
 <canvas id="canvas" width="600" height="600"></canvas>
@@ -107,7 +145,6 @@ function startChaosGameAnimated(numVertices, iterations, step, color) {
   let i = 0;
 
   ctx.fillStyle = color;
-
   running = true;
 
   function draw() {
@@ -133,7 +170,7 @@ document.getElementById('startBtn').addEventListener('click', () => {
   const color = document.getElementById('color').value;
 
   if (numVertices < 3 || step <= 0 || iterations < 100) {
-    alert("Bitte gültige Parameter eingeben.");
+    alert("Please enter valid parameters.");
     return;
   }
 
@@ -158,3 +195,4 @@ document.getElementById('saveBtn').addEventListener('click', () => {
 
 </body>
 </html>
+
