--- a/index.html
+++ b/index.html
@@ -2,86 +2,94 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Chaos Game Web</title>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Chaos Game Simulator - Academic Version</title>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --accent-color: #00ffff;
+    }
     body {
-      margin: 0;
-      padding: 30px 20px;
       background-color: #0f0f0f;
-      color: #f0f0f0;
-      font-family: 'Press Start 2P', sans-serif;
+      color: #e0e0e0;
+      font-family: 'VT323', monospace;
+      font-size: 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin: 0;
+      padding: 20px;
     }
-
     h1 {
-      font-size: 1rem;
-      text-align: center;
-      margin-bottom: 10px;
+      font-size: 28px;
+      margin-bottom: 15px;
     }
-
-    nav.breadcrumb {
-      width: 100%;
-      margin-bottom: 20px;
-      text-align: left;
-    }
-
-    nav.breadcrumb a {
-      color: #00ffff;
-      text-decoration: none;
-      font-size: 0.7rem;
-    }
-
-    nav.breadcrumb a:hover {
-      text-decoration: underline;
-    }
-
     #controls {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
       background-color: #1a1a1a;
-      padding: 15px;
+      padding: 15px 20px;
       border: 1px solid #444;
       border-radius: 8px;
       width: 100%;
       max-width: 700px;
     }
-
     label {
-      font-size: 0.5rem;
+      font-size: 18px;
       display: flex;
       flex-direction: column;
       color: #ccc;
     }
-
     input, select, button {
-      margin-top: 5px;
-      font-family: 'Press Start 2P', sans-serif;
-      font-size: 0.6rem;
-      padding: 6px;
+      margin-top: 6px;
+      font-family: 'VT323', monospace;
+      font-size: 18px;
+      padding: 8px;
       background-color: #222;
-      color: #00ffff;
+      color: var(--accent-color);
       border: 1px solid #444;
       border-radius: 4px;
+      transition: all 0.3s ease;
     }
-
     button:hover {
       background-color: #333;
       cursor: pointer;
+      transform: scale(1.05);
     }
-
     canvas {
       border: 2px solid #333;
       background-color: black;
       margin-top: 20px;
       max-width: 100%;
     }
-
+    #stats {
+      margin-top: 10px;
+      font-size: 18px;
+      font-family: monospace;
+      color: var(--accent-color);
+      min-height: 22px;
+      user-select: none;
+    }
+    details {
+      margin-top: 25px;
+      width: 90%;
+      max-width: 700px;
+      background: #111;
+      padding: 15px 20px;
+      border-radius: 8px;
+      border: 1px solid #444;
+      color: #ccc;
+      font-size: 16px;
+      line-height: 1.4;
+    }
+    details summary {
+      cursor: pointer;
+      font-weight: bold;
+      color: var(--accent-color);
+    }
     @media (max-width: 600px) {
       #controls {
         flex-direction: column;
@@ -92,107 +100,164 @@
 </head>
 <body>
 
-<nav class="breadcrumb">
-  <a href="index.html">← Back to Home</a>
-</nav>
+  <h1>Chaos Game in the Browser</h1>
 
-<h1>Chaos Game in the Browser</h1>
+  <div id="controls">
+    <label>Vertices (3+):
+      <input type="number" id="corners" value="3" min="3" max="10" />
+    </label>
+    <label>Step (0.1–2.0):
+      <input type="number" id="step" value="0.5" step="0.05" min="0.1" max="2" />
+    </label>
+    <label>Iterations:
+      <input type="number" id="iterations" value="10000" min="100" max="100000" step="100" />
+    </label>
+    <label>Color:
+      <input type="color" id="color" value="#00ffff" />
+    </label>
+    <button id="startBtn">Start</button>
+    <button id="resetBtn">Reset</button>
+    <button id="saveBtn">Save</button>
+  </div>
 
-<div id="controls">
-  <label>Corners (3+):
-    <input type="number" id="corners" value="3" min="3" max="10">
-  </label>
-  <label>Step (0.1–2.0):
-    <input type="number" id="step" value="1.5" step="0.1" min="0.1" max="2">
-  </label>
-  <label>Iterations:
-    <input type="number" id="iterations" value="5000" min="100" max="100000" step="100">
-  </label>
-  <label>Color:
-    <input type="color" id="color" value="#00ffff">
-  </label>
-  <button id="startBtn">Start</button>
-  <button id="resetBtn">Reset</button>
-  <button id="saveBtn">Save</button>
-</div>
+  <canvas id="canvas" width="600" height="600"></canvas>
 
-<canvas id="canvas" width="600" height="600"></canvas>
+  <div id="stats"></div>
 
-<script>
-const canvas = document.getElementById('canvas');
-const ctx = canvas.getContext('2d');
+  <details>
+    <summary>Theory & References</summary>
+    <p><strong>Chaos Game formula:</strong></p>
+    <pre style="color: var(--accent-color);">P<sub>n+1</sub> = P<sub>n</sub> + r × (V<sub>i</sub> - P<sub>n</sub>)</pre>
+    <p>Where:</p>
+    <ul>
+      <li><em>P<sub>n</sub></em> = current point</li>
+      <li><em>V<sub>i</sub></em> = randomly chosen vertex</li>
+      <li><em>r</em> = step fraction between 0 and 1</li>
+    </ul>
+    <p>This process iteratively moves the current point closer to a randomly chosen vertex of the polygon.</p>
+    <p>References:</p>
+    <ul>
+      <li>Michael Barnsley, <em>Fractals Everywhere</em> (1988)</li>
+      <li><a href="https://en.wikipedia.org/wiki/Chaos_game" target="_blank" style="color: var(--accent-color)">Wikipedia: Chaos Game</a></li>
+    </ul>
+  </details>
 
-function generatePolygon(n, radius = 250, centerX = canvas.width / 2, centerY = canvas.height / 2) {
-  const vertices = [];
-  for (let i = 0; i < n; i++) {
-    const angle = 2 * Math.PI * i / n;
-    vertices.push({
-      x: centerX + radius * Math.cos(angle),
-      y: centerY + radius * Math.sin(angle)
-    });
-  }
-  return vertices;
-}
+  <script>
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+    const colorInput = document.getElementById('color');
+    const stats = document.getElementById('stats');
 
-let animationFrame;
-let running = false;
-
-function startChaosGameAnimated(numVertices, iterations, step, color) {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  const vertices = generatePolygon(numVertices);
-  let x = Math.random() * canvas.width;
-  let y = Math.random() * canvas.height;
-  let i = 0;
-
-  ctx.fillStyle = color;
-  running = true;
-
-  function draw() {
-    if (!running || i >= iterations) return;
-
-    for (let j = 0; j < 100 && i < iterations; j++, i++) {
-      const v = vertices[Math.floor(Math.random() * vertices.length)];
-      x = x + step * (v.x - x);
-      y = y + step * (v.y - y);
-      ctx.fillRect(x, y, 2, 2);
+    function generatePolygon(n, radius = 250, centerX = canvas.width / 2, centerY = canvas.height / 2) {
+      const vertices = [];
+      for (let i = 0; i < n; i++) {
+        const angle = 2 * Math.PI * i / n - Math.PI / 2; // Rotate to have first vertex at top
+        vertices.push({
+          x: centerX + radius * Math.cos(angle),
+          y: centerY + radius * Math.sin(angle)
+        });
+      }
+      return vertices;
     }
 
-    animationFrame = requestAnimationFrame(draw);
-  }
+    let animationFrame;
+    let running = false;
+    let lastTimestamp = 0;
+    let fps = 0;
 
-  draw();
-}
+    function startChaosGameAcademic(numVertices, iterations, step, color) {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      const vertices = generatePolygon(numVertices);
 
-document.getElementById('startBtn').addEventListener('click', () => {
-  const numVertices = parseInt(document.getElementById('corners').value);
-  const step = parseFloat(document.getElementById('step').value);
-  const iterations = parseInt(document.getElementById('iterations').value);
-  const color = document.getElementById('color').value;
+      // Draw vertices with labels (no glow)
+      ctx.fillStyle = '#666';
+      ctx.strokeStyle = '#666';
+      vertices.forEach((v) => {
+        ctx.beginPath();
+        ctx.arc(v.x, v.y, 4, 0, 2 * Math.PI);
+        ctx.fill();
+      });
+      ctx.fillStyle = '#aaa';
+      ctx.font = '16px VT323';
+      vertices.forEach((v, i) => {
+        ctx.fillText(String.fromCharCode(65 + i), v.x + 8, v.y + 6);
+      });
 
-  if (numVertices < 3 || step <= 0 || iterations < 100) {
-    alert("Please enter valid parameters.");
-    return;
-  }
+      let x = Math.random() * canvas.width;
+      let y = Math.random() * canvas.height;
+      let i = 0;
+      running = true;
 
-  running = false;
-  cancelAnimationFrame(animationFrame);
-  startChaosGameAnimated(numVertices, iterations, step, color);
-});
+      function draw() {
+        if (!running || i >= iterations) return;
 
-document.getElementById('resetBtn').addEventListener('click', () => {
-  running = false;
-  cancelAnimationFrame(animationFrame);
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-});
+        // Use the selected color for each batch of points
+        ctx.fillStyle = color;
 
-document.getElementById('saveBtn').addEventListener('click', () => {
-  const link = document.createElement('a');
-  link.download = 'chaosgame.png';
-  link.href = canvas.toDataURL('image/png');
-  link.click();
-});
-</script>
+        for (let j = 0; j < 100 && i < iterations; j++, i++) {
+          const v = vertices[Math.floor(Math.random() * vertices.length)];
+          x = x + step * (v.x - x);
+          y = y + step * (v.y - y);
+          ctx.fillRect(x, y, 2, 2);
+        }
+
+        // Draw vertex labels again in accent color (no glow)
+        ctx.fillStyle = color;
+        ctx.font = '16px VT323';
+        vertices.forEach((v, i) => {
+          ctx.fillText(String.fromCharCode(65 + i), v.x + 6, v.y + 6);
+        });
+
+        // Update stats
+        stats.textContent = `Iterations: ${i} / ${iterations} | FPS: ${fps.toFixed(1)}`;
+
+        animationFrame = requestAnimationFrame(draw);
+      }
+
+      draw();
+    }
+
+    document.getElementById('startBtn').addEventListener('click', () => {
+      const numVertices = parseInt(document.getElementById('corners').value);
+      const step = parseFloat(document.getElementById('step').value);
+      const iterations = parseInt(document.getElementById('iterations').value);
+      const color = colorInput.value;
+
+      if (numVertices < 3 || step <= 0 || iterations < 100) {
+        alert("Please enter valid parameters.");
+        return;
+      }
+
+      running = false;
+      cancelAnimationFrame(animationFrame);
+      startChaosGameAcademic(numVertices, iterations, step, color);
+    });
+
+    document.getElementById('resetBtn').addEventListener('click', () => {
+      running = false;
+      cancelAnimationFrame(animationFrame);
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      stats.textContent = "";
+    });
+
+    document.getElementById('saveBtn').addEventListener('click', () => {
+      const now = new Date().toISOString().replace(/[:.]/g, '-');
+      const link = document.createElement('a');
+      link.download = `chaosgame-${now}.png`;
+      link.href = canvas.toDataURL('image/png');
+      link.click();
+    });
+
+    function updateAccentColor(color) {
+      document.documentElement.style.setProperty('--accent-color', color);
+    }
+
+    colorInput.addEventListener('input', (e) => {
+      updateAccentColor(e.target.value);
+    });
+
+    updateAccentColor(colorInput.value);
+  </script>
 
 </body>
 </html>
-
